COMP4711 SET 4R
Group #19
Jason Sekhon(Captain), Eric Lin(Mate), Morris Arroyo(Mate)

-----------------------
* Completed bravo issue. Added bravo folder and welcome controller inside it. updated menubar item bravo to "/bravo"

* Completed charlie issue. Added charlie controller and updated menubar link for Charlie to "charlie/brown"

* Completed delta issue. Added delta folder and force controller inside it. updated menubar item delta to "/delta/force"

* Completed alpha issue. Added able controller and updated menubar link for Alpha to "/able"

* Added changelog and setup project files